# lzcomplexity

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Cargo.toml  LICENSE  MANIFEST.in  README.md  _pyproject.toml  installAll.sh  installDistance.sh  installLibs.sh  installPython.sh  lzcomplexity-0.8.0-cp312-macosx_14_0.whl  lzcomplexity.cpp  lzdistance.cpp  main.cpp  pyproject.toml  run.sbatch  runTest.sh  setup.cfg  setup.py
.github/scripts/: codespell.sh
.github/workflows/: ci.yml  cmake-build.yml  cmake.yml  lzcomplexity_build.yml  lzdistance_build.yml  master_build.yml  master_build_static.yml  pull_request.yml  wheels.yml
.github/workflows/graphs/: cmake.yml
cmake/: AddParallelLib.cmake  CheckCompiler.cmake  ConfigInstallDirs.cmake  FindLZCore.cmake  FindTBB.cmake  InstallingConfigs.cmake  InstallingGeneral.cmake  SetUpLinux.cmake  SetUpMacOS.cmake  SetUpWindows.cmake  lzMacros.cmake  packaging.cmake  useTbb.cmake
cmake/config/: CMakeCPackOptions.cmake.in  Info.plist  export_path.sh
config/: .clang-format
config/lzcomplexity_debian/: README.Debian  changelog  control  copyright  liblzcomplexity-dev.install  liblzcomplexity1.install  lzcomplexity-dev.install  lzcomplexity-tools.install  lzcomplexity.install  lzcomplexity.symbols  rules
config/lzcomplexity_debian/source/: options
config/lzcomplexity_homebrew/: lzcomplexity.rb
config/lzdistance_debian/: changelog  control  copyright  lzdistance.install  lzdistance.symbols  rules
crates/lzcomplexity-core/: Cargo.toml
crates/lzcomplexity-core/src/: lib.rs  lpf.rs  lz76.rs  metrics.rs  sequence.rs  shuffle.rs  spectral.rs  suffix_array.rs
crates/lzcomplexity-py/: Cargo.toml
crates/lzcomplexity-py/src/: lib.rs
doc/man/: lzcomplexity.1  lzdistance.1  man.1
main/: config.h  config_distance.hpp  lzcomplexity.h  lzdistance.hpp  main.h  messages.h
modules/: CMakeLists.txt
modules/core/: CMakeLists.txt
modules/core/inc/lz/: core.h  flags.h  lempelziv.h  lpf.h  lz76.h  sequence.h  spectral.hpp  structures.h  suffix_structure.h  types.h
modules/core/src/: lempelziv.cpp  lpf.cpp  lz76.cpp  sequence.cpp  spectral.cpp
modules/distance/: CMakeLists.txt
modules/distance/inc/lzDistance/: flags.hpp  lzDistanceApp.hpp
modules/distance/src/: flags.cpp  lzDistanceApp.cpp
modules/lz/: CMakeLists.txt  Config.cmake.in
modules/lz/inc/lz/: flags.h  flags.hpp  lzApp.h  lzApp.hpp
modules/lz/src/: flags.cpp  lzApp.cpp
modules/sa/: CMakeLists.txt
modules/sa/inc/lz/: caps.h  sa_structures.h  sais_lite.h
modules/sa/src/: caps.cpp  sais_lite.cpp
modules/utils/: CMakeLists.txt
modules/utils/inc/lz/: exceptions.h  general.h  lz_arena.h  lzexceptions.h  myexceptions.h  outputstrings.h  parallel_utils.h  pnm.h  sse2neon.h  types.h  utils.h
modules/utils/inc/lz/internal/: cilk.hpp  generic.hpp  openmp.hpp  parallel_common.h  tbb.hpp
modules/utils/src/: cilk.cpp  generic.cpp  lz_arena.cpp  lz_tbb_arena.h  openmp.cpp  parallel_utils.cpp  pnm.cpp  tbb.cpp
patches/: CMakeLists.txt  tbb.patch
python/: CMakeLists.txt  project.toml  setup_local.py  setup_with_pybind.py
python/lzcomplexity/: __init__.py  __init__.pyi
python/src/: PyCore.cpp  PyLempelziv.cpp  PyMetrics.cpp  PySequence.cpp  PySpectral.cpp  PyStructures.cpp  PySuffixarray.cpp  PyUtils.cpp  lz_opaques.h  main.cpp  utils.hpp
python/src/inc/: PyLempelZiv.hpp  PySequence.hpp  utils.hpp
python/test/: test.py
standalone/: lzcomplexity.cpp  lzdistance.cpp
standalone/inc/: config.h  config_complexity.hpp  config_distance.hpp  config_utils.hpp  kseq.hpp  lzcomplexity.h  lzcomplexity.hpp  lzdistance.hpp  messages.h
test_data/: test  test.json  test2  test2.json
