[build-system]
requires = [
    "setuptools>=68",
    "wheel",
    "ninja",
    "cmake>=3.20",
    "tomli>=2.0; python_version < '3.11'",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-* cp314-*"
skip  = "pp* *-win32 *-musllinux* *-manylinux_i686"

[tool.cibuildwheel.macos]
archs = ["arm64"]
before-build = "brew install libomp llvm"

[tool.cibuildwheel.linux]
before-build = "yum install -y libgomp-devel || apt-get install -y libgomp1"
