[metadata]
license_files = LICENSE

[bdist_wheel]
universal = 0

[sdist]
formats = gztar

[build_ext]
inplace = 1


[tool.cibuildwheel]
build-frontend = "build"
skip = "cp36-* *-manylinux_i686 *_ppc64le *_s390x *_universal2"

[tool.build]
skip = "cp36-* *-manylinux_i686 *_ppc64le *_s390x *_universal2"